theme.css
/**/
/**** Isotope CSS3 transitions ****/

.isotope,
.isotope .isotope-item {
  -webkit-transition-duration: 0.8s;
     -moz-transition-duration: 0.8s;
       -o-transition-duration: 0.8s;
          transition-duration: 0.8s;
}

.isotope {
  -webkit-transition-property: height, width;
     -moz-transition-property: height, width;
       -o-transition-property: height, width;
          transition-property: height, width;
}

.isotope .isotope-item {
  -webkit-transition-property: -webkit-transform, opacity;
     -moz-transition-property:    -moz-transform, opacity;
       -o-transition-property:         top, left, opacity;
          transition-property:         transform, opacity;
}
/**** disabling Isotope CSS3 transitions ****/
.isotope.no-transition,
.isotope.no-transition .isotope-item,
.isotope .isotope-item.no-transition {
  -webkit-transition-duration: 0s;
     -moz-transition-duration: 0s;
       -o-transition-duration: 0s;
          transition-duration: 0s;
}
.isotope .isotope-item { border-radius: 5px 5px 5px 5px; }
#theCategoryPage #content, #content, #subcontent, #the_page, #thumbnails_block1, #thePicturePage #content, #content_cell {
    max-width: none;
}
#theCommentsPage #content,
#theUploadPage #content,
#theRegisterPage #content,
#theIdentificationPage #content,
#theProfilePage #content,
#theSearchPage #content,
#theAboutPage #content,
#thePopuphelpPage #content,
#thePasswordPage #content,
#theNotificationPage #content,
#theTagsPage #content,
#theNBMPage #content
{
	width:100%;
}
/*
#menubar_container {
    display: inline-block;
}  

 #subcontent {
    display: inline-block;
		width:100%;
}  
*/
 #footer {
    position: relative;
}
#the_page
{
	padding-bottom: 20px;
}
.nav_bulle {
  position: relative;
}
.categoryActions .menuf .flags {
    margin-top: 5px;
}
.titrePage {
    height: 32px;
}
.titrePage img {
    max-height: 16px;
    max-width: 16px;
}
 #content_cell {
    min-height: 490px;
		display:block;
		width:auto;
}
 #subcontent {
		display:block;
		width:auto;
}
.subcontent .stuffs_block, .content_block {
    max-width:none;
}
.content_block {
    border:none;
}
.content_block #comments ul {
    display: block;
}

#menubar {
    display: inline;
    float: left;
    margin: 0 10px 10px 1em;
    padding: 0;
    width: 18em;
}  
.stuffs_thumbnails .bloc {
	position:relative !important;
	top:auto !important;
	left:auto !important;
}
.stuffs_thumbnails .bloc {
    display: inline-block !important;
}
.stuffs_thumbnails #thumbnails {
	margin:0;
}
.stuffs_thumbnails .bloc {
	margin-left:auto;
	margin-right:auto;
	padding:0;
	
}
.bloc_stuff {
	z-index:999;
}
#thePicturePage .stuffs_thumbnails {
	width:auto;
}
.gmapsMarkup {
width: auto !important;
}
.bloc {
    display: block;
    margin-top: 3px;
		margin-bottom:3px;
    padding: 5px;
		z-index:999;
}
.content_block, .bloc_stuff, #subcontent .middle_block {
    margin: 3px !important;
}
.content_block {
	z-index:999;
}
.menuf ul li ul {
    z-index: 1100;
}
.bloc * {
    position: relative;
}
.bloc .title {
    left: 6px;
    max-width: 138px;
    padding: 7px 10px 6px;
    position: absolute;
    top: 6px;
    z-index: 1;
    cursor: pointer;
    display: block;
    float: left;
    margin-right: 5px;
    padding: 7px 10px 8px;
}
.bloc a {
    display: block;
    overflow: hidden;
    position: relative;
    text-indent: -9999px;
    width: 160px;
}
.nav_bulle {
    font-size: 9px;
    font-weight: bold;
    margin-right: 5px;
    padding: 7px 10px 8px;
}
.titrePage .categoryActionsContainer {
 /*   float: none; */
}
.categoryActions {
    display: inline;
    float: right;
}
#thumb_navigation {
	display:none
}
#subcontent .stuffs_block #comments ul.thumbnailCategories, #comments ul {
	padding:5px;
  display: inline-block;
}
#subcontent .stuffs_block, .content_block {
	padding:0;
}
#theHeader h1 {
	padding:0;
}
.calendarBar span {
    float: left;
}
/****************
 color backgroung etc 
 ************************/
body {
    background-color: #1E1E1E;
    color: #FFFFFF;
    font-family: Helvetica,Arial,sans-serif;
    margin: 5px;
}
a {
    color: #FFFFFF;
    text-decoration: none;
}
.masonry-brick, .bloc .title, .nav_bulle {
	color: #FFFFFF;
	background-image: url("img/btn.png");
	border-radius: 5px 5px 5px 5px;
	font-family: Helvetica,Arial,sans-serif;
	font-size: 9px;
	font-weight: bold;
	text-align: center;
	text-decoration: none;
	text-transform: uppercase;
	white-space: normal;

}
.bloc a {
  border-radius: 5px 5px 5px 5px;
  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.75);
  -webkit-box-shadow: 0 5px 5px rgba(0,0,0,0.75);
  -moz-box-shadow: 0 5px 5px rgba(0,0,0,0.75);
}
#thePicturePage .left_block, #thePicturePage .right_block, #thePicturePage .middle_block, #content {
  background: transparent
}
#theHeader a, .titrePage a, .footer_login a, .navigationBar a {
    color: #E6554F;
}
.album {
	background-color:transparent;
}

.bloc_stuff {
	border: 1px solid #424242;
}
#thePicturePage .left_block, #thePicturePage .right_block, #thePicturePage .middle_block, #content {
	border:none;
}
#menubar {
	color: #FFFFFF;
	background-image: url("img/btn.png");
	border-radius: 5px 5px 5px 5px;
	font-family: Helvetica,Arial,sans-serif;
	font-size: 12px;
	font-weight: bold;
	text-decoration: none;
	white-space: normal;
	border: 1px solid #424242;
	padding:5px;
}
#menubar dd{
	font-weight:normal;
}
.browsePath, #theHeader, #imageTitle, .randomButtons, #footer_left, #copyright {
	color: #FFFFFF;
	background-image: url("img/btn.png");
	background-color:transparent;
	border-radius: 5px 5px 5px 5px;
	font-family: Helvetica,Arial,sans-serif;
	font-size: 9px;
	font-weight: bold;
	text-decoration: none;
	text-transform: uppercase;
	white-space: normal;
	border: 1px solid #424242;
	padding:5px;
}
.content_block .additional_info {
	color: #FFFFFF;
	background-image: url("img/btn.png");
	background-color:transparent;
	border-radius: 5px 5px 5px 5px;
	font-family: Helvetica,Arial,sans-serif;
	text-decoration: none;
	white-space: normal;
	border: 1px solid #424242;
	padding:5px;
}
.bloc_stuff {
	color: #FFFFFF;
	background-image: url("img/btn.png");
	background-color:transparent;
	border-radius: 5px 5px 5px 5px;
	font-family: Helvetica,Arial,sans-serif;
	text-decoration: none;
	white-space: normal;
	border: 1px solid #424242;
}
.titrePage .categoryActions {
	color: #FFFFFF;
	background-image: url("img/btn.png");
	background-color:transparent;
	border-radius: 5px 5px 5px 5px;
	font-family: Helvetica,Arial,sans-serif;
	font-size: 9px;
	font-weight: bold;
	text-decoration: none;
	text-transform: uppercase;
	white-space: normal;
	border: 1px solid #424242;
}
.categoryActions li {
  	padding:5px;
}

#tabZone {
	color: #FFFFFF;
	background-image: url("img/btn.png");
	border-radius: 5px 5px 5px 5px;
	font-family: Helvetica,Arial,sans-serif;
	font-size: 9px;
	font-weight: bold;
	text-decoration: none;
	text-transform: uppercase;
	white-space: normal;
	border: 1px solid #424242;
	padding:5px;
	background-color:transparent;
}
#tabZone * {
	color: #FFFFFF;
	background-color:transparent;
}

